@@ -7,13 +7,16 @@ import static io.netty.handler.codec.http.HttpResponseStatus.NOT_MODIFIED;
 
 import java.io.File;
 
+import javax.inject.Inject;
+import javax.inject.Singleton;
+
 import com.gentics.mesh.context.InternalActionContext;
 import com.gentics.mesh.context.impl.InternalRoutingActionContextImpl;
 import com.gentics.mesh.core.data.node.field.BinaryGraphField;
 import com.gentics.mesh.core.image.spi.ImageManipulator;
+import com.gentics.mesh.http.MeshHeaders;
 import com.gentics.mesh.util.ETag;
 
-import io.vertx.core.Handler;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.core.http.HttpHeaders;
 import io.vertx.ext.web.RoutingContext;
@@ -22,18 +25,23 @@ import rx.Single;
 /**
  * Handler which will accept {@link BinaryGraphField} elements and return the binary data using the given context.
  */
-public class BinaryFieldResponseHandler implements Handler<BinaryGraphField> {
+@Singleton
+public class BinaryFieldResponseHandler {
 
-	private RoutingContext rc;
 	private ImageManipulator imageManipulator;
 
-	public BinaryFieldResponseHandler(RoutingContext rc, ImageManipulator imageManipulator) {
-		this.rc = rc;
+	@Inject
+	public BinaryFieldResponseHandler(ImageManipulator imageManipulator) {
 		this.imageManipulator = imageManipulator;
 	}
 
-	@Override
-	public void handle(BinaryGraphField binaryField) {
+	/**
+	 * Handle the binary field response.
+	 * 
+	 * @param rc
+	 * @param binaryField
+	 */
+	public void handle(RoutingContext rc, BinaryGraphField binaryField) {
 		File binaryFile = binaryField.getFile();
 		if (!binaryFile.exists()) {
 			rc.fail(error(NOT_FOUND, "node_error_binary_data_not_found"));
@@ -58,12 +66,12 @@ public class BinaryFieldResponseHandler implements Handler<BinaryGraphField> {
 				rc.response().setStatusCode(NOT_MODIFIED.code()).end();
 			} else if (binaryField.hasImage() && ac.getImageParameters().isSet()) {
 				// Resize the image if needed
-				Single<Buffer> buffer = imageManipulator.handleResize(binaryField.getFile(), binaryField.getSHA512Sum(),
-						ac.getImageParameters());
+				Single<Buffer> buffer = imageManipulator.handleResize(binaryField.getFile(), binaryField.getSHA512Sum(), ac.getImageParameters());
 				buffer.subscribe(imageBuffer -> {
 					rc.response().putHeader(HttpHeaders.CONTENT_LENGTH, String.valueOf(imageBuffer.length()));
 					rc.response().putHeader(HttpHeaders.CONTENT_TYPE, "image/jpeg");
 					rc.response().putHeader(HttpHeaders.CACHE_CONTROL, "must-revalidate");
+					rc.response().putHeader(MeshHeaders.WEBROOT_RESPONSE_TYPE, "binary");
 					// TODO encode filename?
 					rc.response().putHeader("content-disposition", "inline; filename=" + fileName);
 					rc.response().end(imageBuffer);
@@ -76,8 +84,9 @@ public class BinaryFieldResponseHandler implements Handler<BinaryGraphField> {
 					rc.response().putHeader(HttpHeaders.CONTENT_LENGTH, contentLength);
 					rc.response().putHeader(HttpHeaders.CONTENT_TYPE, contentType);
 					rc.response().putHeader(HttpHeaders.CACHE_CONTROL, "must-revalidate");
+					rc.response().putHeader(MeshHeaders.WEBROOT_RESPONSE_TYPE, "binary");
 					// TODO encode filename?
-					// TODO images and pdf files should be shown in inline format 
+					// TODO images and pdf files should be shown in inline format
 					rc.response().putHeader("content-disposition", "attachment; filename=" + fileName);
 					rc.response().end(buffer);
 				});
