@@ -8,6 +8,8 @@ icon:check[] Java REST Client: A potential threading issue within the Java REST 
 
 icon:check[] Fixed handling "required" and "allow" properties of schema fields when adding fields to schemas.
 
+icon:plus[] The *Webroot-Response-Type* header can now be used to differntiate between a webroot binary and webroot node response. The values of this header can either be *binary* or *node*. 
+
 == 0.10.1 (08.09.2017)
 
 icon:plus[] Clustering: Added link:https://getmesh.io/docs/beta/clustering.html#_node_discovery[documentation] and support for cluster configurations which use a list of static IPs instead of multicast discovery.
